# gp-copy

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  generate-certs.sh
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.db  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/db/: session.py
backend/app/exceptions/: exception_handlers.py  exceptions.py
backend/app/middleware/: __init__.py  request_context.py  session.py
backend/app/models/: __init__.py  article.py  author_profile.py  bookmark.py  feedback.py  field.py  interest.py  paper.py  permission.py  prompt.py  role.py  search.py  user.py
backend/app/repositories/: article_repository.py  bookmark_repository.py  email_repository.py  feedback_repository.py  field_repository.py  interest_repository.py  search_repository.py  session_repository.py  user_repository.py
backend/app/schemas/: __init__.py  article.py  auth.py  bookmark.py  common.py  feedback.py  field.py  interest.py  search.py  user.py
backend/app/services/: article_service.py  bookmark_service.py  boolmark_service.py  email_service.py  feedback_service.py  field_service.py  interest_service.py  scoring_service.py  search_service.py  session_service.py  user_service.py
backend/app/shared/: __init__.py  config.py  logging_config.py  security.py  telemetry.py
backend/app/tasks/: scoring_tasks.py
backend/scripts/: seed_dev.py
backend/tests/: conftest.py  test_health.py
backend/tests/unit/: test_articles.py  test_auth.py  test_feedback.py  test_fields.py  (+1 more)
(+144 files in other folders)
