[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
    # Observability
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",
    # Prod server
    "gunicorn>=22.0.0",
    # Testing
    "pytest>=8.2.0",
    "pytest-cov>=4.1.0", # Add this line
    "httpx>=0.28.1",
    # Security
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.1.0.post1",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.0",
    # form parsing lib not needed now since login is JSON
    "logging-config>=1.0.4",
    "resend>=2.14.0",
    "testcontainers[postgres]>=4.13.1",
    "python-slugify>=8.0.4",
    "slugify>=0.0.1",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"
